# SMARTCONTRACT-SOLANA

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
client/: createToken.ts  deposit.ts  init.ts  parseEvent.ts  setRate.ts  withdraw.ts
programs/payment-gpu-marketplace/: Cargo.toml
programs/payment-gpu-marketplace/src/: errors.rs  events.rs  lib.rs
programs/payment-gpu-marketplace/src/instructions/: deposit.rs  emergency_withdraw.rs  initializer.rs  mod.rs  pause.rs  set_burn_rate.rs  set_fee_rate.rs  set_fee_wallet.rs  set_maximum_withdraw.rs  set_minimum_withdraw.rs  set_router.rs  set_staking_rate.rs  set_staking_wallet.rs  set_token.rs  set_withdraw_signer.rs  unpause.rs  update_config.rs  withdraw.rs
programs/payment-gpu-marketplace/src/states/: config.rs  mod.rs  withdrawal.rs
programs/payment-gpu-marketplace/src/utils/: constants.rs  helpers.rs  macros.rs  mod.rs  roles.rs  seeds.rs
sdk/: index.ts  payment_gpu_marketplace.ts  program.ts
sdk/helpers/: index.ts
sdk/instructions/: deposit.ts  emergencyWithdraw.ts  emergency_withdraw.ts  index.ts  initialize.ts  pause.ts  setRouter.ts  set_burn_rate.ts  set_fee_rate.ts  set_fee_wallet.ts  set_maximum_withdraw.ts  set_minimum_withdraw.ts  set_staking_rate.ts  set_staking_wallet.ts  set_token.ts  set_withdraw_signer.ts  unpause.ts  update_config.ts  withdraw.ts
sdk/pda/: index.ts
sdk/raydium/: index.ts  pda.ts
tests/: 00-environment.test.ts  01-settings.test.ts  02-deposit.test.ts  03-withdraw.test.ts
tests/utils/: consts.ts  createToken.ts  helpers.ts
